--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,11 @@
 ---
+export function Component1(props: { number: number }) {
+	return <div>Shri is the world''s no {props.number}</div>;
+}
+
+export function Component2() {
+	return <div>Math.random()</div>;
+}
 ---
 
 <html lang="en">
@@ -10,6 +17,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<Component1 number={1} />
+		<Component2 />
 	</body>
 </html>
