Adds React Import

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import React from "react";
+
 export function Component1(props: { number: number }) {
 	return <div>Shri is the world''s no {props.number}</div>;
 }
