--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,6 @@
 ---
-import React from "react";
-
 export function Component1(props: { number: number }) {
-	return <div>Shri is the world''s no {props.number}</div>;
+	return <div>Shri is the worlds no {props.number}</div>;
 }
 
 export function Component2() {
