Adds tsx files for components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,6 @@
 ---
-export function Component1(props: { number: number }) {
-	return <div>Shri is the worlds no {props.number}</div>;
-}
-
-export function Component2() {
-	return <div>Math.random()</div>;
-}
+import { Component1 } from "../components/Component1";
+import { Component2 } from "../components/Component2";
 ---
 
 <html lang="en">
