--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { ClientLoadComponent } from "../components/ClientLoadComponent";
 import { Component1 } from "../components/Component1";
 import { Component2 } from "../components/Component2";
 ---
@@ -14,5 +15,6 @@ import { Component2 } from "../components/Component2";
 	<body>
 		<Component1 number={1} />
 		<Component2 />
+		<ClientLoadComponent client:load />
 	</body>
 </html>
