--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,8 @@ import { Component2 } from "../components/Component2";
 	<body>
 		<Component1 number={1} />
 		<Component2 />
-		<ClientLoadComponent client:load />
+		<ClientLoadComponent />
+		<!-- Island
+		<ClientLoadComponent client:load /> -->
 	</body>
 </html>
