Reverts back to Island

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,7 @@ import { Component2 } from "../components/Component2";
 	<body>
 		<Component1 number={1} />
 		<Component2 />
-		<ClientLoadComponent />
-		<!-- Island
-		<ClientLoadComponent client:load /> -->
+		<!-- Island -->
+		<ClientLoadComponent client:load />
 	</body>
 </html>
