--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { ClientLoadComponent } from "../components/ClientLoadComponent";
+import { ClientLoadComponent1 } from "../components/ClientLoadComponent1";
 import { Component1 } from "../components/Component1";
 import { Component2 } from "../components/Component2";
 ---
@@ -13,9 +13,9 @@ import { Component2 } from "../components/Component2";
 		<title>Astro</title>
 	</head>
 	<body>
-		<Component1 number={1} />
+		<Component1 />
 		<Component2 />
 		<!-- Island -->
-		<ClientLoadComponent client:load />
+		<ClientLoadComponent1 client:load />
 	</body>
 </html>
