--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,9 @@
 import { ClientLoadComponent1 } from "../components/ClientLoadComponent1";
 import { Component1 } from "../components/Component1";
 import { Component2 } from "../components/Component2";
+
+const response = await fetch("https://random-data-api.com/api/v2/users");
+const data = await response.json();
 ---
 
 <html lang="en">
@@ -13,7 +16,7 @@ import { Component2 } from "../components/Component2";
 		<title>Astro</title>
 	</head>
 	<body>
-		<Component1 />
+		<Component1 name={JSON.stringify(data.first_name)} />
 		<Component2 />
 		<!-- Island -->
 		<ClientLoadComponent1 client:load />
