--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,10 @@ import { ClientLoadComponent1 } from "../components/ClientLoadComponent1";
 import { Component1 } from "../components/Component1";
 import { Component2 } from "../components/Component2";
 
+Astro.response.headers.set(
+	"Cache-Control", "max-age=300, s-maxage=300,stale-while-revalidate=300"
+)
+
 const response = await fetch("https://random-data-api.com/api/v2/users");
 const data = await response.json();
 ---
