--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,37 @@
 ---
-import { ClientLoadComponent1 } from "../components/ClientLoadComponent1";
-import { Component1 } from "../components/Component1";
-import { Component2 } from "../components/Component2";
+	import { ClientLoadComponent1 } from "../components/ClientLoadComponent1";
+	// import { Component1 } from "../components/Component1";
+	import { Component2 } from "../components/Component2";
 
-Astro.response.headers.set(
-	"Cache-Control", "max-age=0, s-maxage=300,stale-while-revalidate=300"
-)
+	Astro.response.headers.set(
+		"Cache-Control", "max-age=0, s-maxage=300,stale-while-revalidate=300"
+	)
 
-const response = await fetch("https://random-data-api.com/api/v2/users");
-const data = await response.json();
+	const response = await fetch("https://random-data-api.com/api/v2/users");
+	const data = await response.json();
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<Component1 name={JSON.stringify(data.first_name)} />
-		<Component2 />
-		<!-- Island -->
-		<ClientLoadComponent1 client:load />
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<meta name="viewport" content="width=device-width" />
+	<meta name="generator" content={Astro.generator} />
+	<title>Astro</title>
+</head>
+
+<body>
+	<!-- <Component1 name={JSON.stringify(data.first_name)} /> -->
+	<div>
+		<h1>API Response:</h1>
+		<ul>
+			{JSON.stringify(data.first_name)}
+		</ul>
+	</div>
+	<Component2 />
+	<!-- Island -->
+	<ClientLoadComponent1 client:load />
+</body>
+
 </html>
